--- a/src/App.css
+++ b/src/App.css
@@ -122,3 +122,8 @@ input[type="radio"]::before {
 .customText {
   font-size: xx-large !important;
 }
+
+.disabled {
+  pointer-events: none;
+  opacity: 0.4;
+}
